Add config chart.

--- a/charts/ingress/values.yaml
+++ b/charts/ingress/values.yaml
@@ -2,3 +2,10 @@
 nameOverride: ""
 fullnameOverride: ""
 productionBranch: main
+
+images:
+  app:
+    tag:
+
+securityContext: {}
+podSecurityContext: {}
