--- a/charts/node-express/Chart.yaml
+++ b/charts/node-express/Chart.yaml
@@ -18,6 +18,6 @@ type: application
 version: 0.2.0
 
 dependencies:
-- name: quantcdn/ingress
+- name: ingress
   version: 0.2.0
   repository: "https://quantcdn.github.io/helm-charts"
