--- a/charts/drupal-nextjs/templates/env.yaml
+++ b/charts/drupal-nextjs/templates/env.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: drupal-config
+  name: {{ .Values.images.drupal.name }}-config--{{ .Values.appEnvrionment }}
 data:
     MARIADB_USER: "{{ .Values.secrets.database.username }}"
     MARIADB_PASSWORD: "{{ .Values.secrets.database.password }}"
