--- a/charts/drupal-nextjs/templates/pull-secret.yaml
+++ b/charts/drupal-nextjs/templates/pull-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: quant-cloud
+  name: quant-cloud-nextjs
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "quant.imagePullSecretValue" . }}
