--- a/charts/drupal-nextjs/templates/app-pvc.yaml
+++ b/charts/drupal-nextjs/templates/app-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: drupal-pvc
+  name: drupal-pvc-{{ .Values.appEnvrionment }}
 spec:
   storageClassName: nfs-client
   accessModes:
