--- a/charts/drupal-nextjs/templates/authorized-keys.yaml
+++ b/charts/drupal-nextjs/templates/authorized-keys.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: authorized-keys
+  name: authorized-keys-{{ .Values.appEnvrionment }}
 data:
   authorized_keys: {{ toYaml .Values.secrets.authorized_keys | indent 2 }}
