--- a/charts/waf/templates/next-hop.yml
+++ b/charts/waf/templates/next-hop.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: next-hop-helm
+  name: next-hop
   labels:
     {{- include "quant-waf.labels" . | nindent 4 }}
   namespace: default
