Support configName via helm value. Ensure config object is created for non-prod.

--- a/charts/config/templates/env.yaml
+++ b/charts/config/templates/env.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.productionBranch .Values.images.app.tag }}
+{{- if or (eq .Values.productionBranch .Values.images.app.tag) (ne .Values.configName false) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
