--- a/charts/drupal/templates/env.yaml
+++ b/charts/drupal/templates/env.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: drupal-config
+  name: {{ .Values.configName | default "drupal-config" }}
 data:
     MARIADB_USER: "{{ .Values.secrets.database.username }}"
     MARIADB_PASSWORD: "{{ .Values.secrets.database.password }}"
