--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -6,6 +6,7 @@ replicaCount: 1
 nameOverride: ""
 fullnameOverride: ""
 productionBranch: main
+configName: drupal-config
 
 images:
   pullPolicy: Always
