--- a/charts/drupal/templates/app.yaml
+++ b/charts/drupal/templates/app.yaml
@@ -3,9 +3,9 @@ kind: Deployment
 metadata:
   annotations:
     timestamp: {{ now | quote }}
-  name: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+  name: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
   labels:
-    app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+    app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
     version: {{ .Values.appVersion }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
@@ -13,7 +13,7 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+      app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
   template:
     metadata:
       annotations:
@@ -35,11 +35,11 @@ spec:
             defaultMode: 384
         - name: drupal-data
           persistentVolumeClaim:
-            claimName: drupal-pvc
+            claimName: "drupal-pvc-{{ .Values.appEnvironment }}"
         {{- if .Values.images.redis.enabled }}
         - name: redis-data
           persistentVolumeClaim:
-            claimName: redis-pvc
+            claimName: "redis-pvc-{{ .Values.appEnvironment }}"
         {{- end }}
       {{- end }}
       containers:
