--- a/charts/drupal/templates/redis-pvc.yaml
+++ b/charts/drupal/templates/redis-pvc.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redis-pvc
+  name: "redis-pvc-{{ .Values.appEnvironment }}"
 spec:
   storageClassName: nfs-client
   accessModes:
