--- a/charts/drupal/templates/service-app.yaml
+++ b/charts/drupal/templates/service-app.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+  name: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
   namespace: default
   labels:
-    app: "{{ .Values.images.app.name }}-{{ .Values.images.app.tag }}"
+    app: "{{ .Values.images.app.name }}-{{ .Values.appEnvironment }}"
 spec:
     ports:
     - name: 80-{{ .Values.images.app.port }}
