--- a/charts/drupal/values.yaml
+++ b/charts/drupal/values.yaml
@@ -2,6 +2,7 @@
 # Provides default variables to be passed into your templates.
 
 replicaCount: 1
+region: us
 
 nameOverride: ""
 fullnameOverride: ""
