Swap lax for sea.

--- a/charts/drupal/templates/location-optimizer.yaml
+++ b/charts/drupal/templates/location-optimizer.yaml
@@ -13,7 +13,7 @@ data:
       "params": {
         "policy": "static",
         "mustInclude": [
-            {"locationcode":"lax", "provider": "lumen"}
+            {"locationcode":"sea", "provider": "lumen"}
         ]
       }
     }
