--- a/charts/drupal/templates/location-optimizer.yaml
+++ b/charts/drupal/templates/location-optimizer.yaml
@@ -15,6 +15,8 @@ data:
         "mustInclude": [
             {"locationcode":"sea", "provider": "lumen"}
         ]
+        "minimumLocations": 1,
+        "maximumLocations": 1
       }
     }
   {{- else }}
