--- a/charts/drupal-nextjs/templates/pull-secret.yaml
+++ b/charts/drupal-nextjs/templates/pull-secret.yaml
@@ -1,7 +1,9 @@
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: quant-cloud-nextjs
+  name: quant-cloud
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "quant.imagePullSecretValue" . }}
+{{- end }}
