--- a/charts/drupal-nextjs/templates/pvc-drupal.yaml
+++ b/charts/drupal-nextjs/templates/pvc-drupal.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "drupal-pvc-{{ .Values.appEnvironment }}"
+  name: "{{ .Values.images.drupal.name }}-pvc-{{ .Values.appEnvironment }}"
 spec:
   storageClassName: nfs-client
   accessModes:
