--- a/charts/drupal-nextjs/templates/pvc-redis.yaml
+++ b/charts/drupal-nextjs/templates/pvc-redis.yaml
@@ -1,8 +1,9 @@
 {{- if .Values.images.redis.enabled }}
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redis-pvc
+  name: "redis-pvc-{{ .Values.appEnvironment }}"
 spec:
   storageClassName: nfs-client
   accessModes:
@@ -10,4 +11,5 @@ spec:
   resources:
     requests:
       storage: 1Gi
+{{- end }}
 {{- end }}
