--- a/charts/drupal-nextjs/templates/service-ingress.yaml
+++ b/charts/drupal-nextjs/templates/service-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.productionBranch .Values.appEnvironment }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -17,3 +18,4 @@ spec:
     type: ClusterIP
 status:
     loadBalancer: {}
+{{- end }}
