--- a/charts/drupal-nextjs/templates/cm-nextjs.yaml
+++ b/charts/drupal-nextjs/templates/cm-nextjs.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.images.nextjs.name }}-config-{{ .Values.appEnvrionment }}
+  name: {{ .Values.images.nextjs.name }}-config-{{ .Values.appEnvironment }}
 data:
     NEXT_PUBLIC_DRUPAL_BASE_URL: {{ .Values.images.nextjs.config.drupal_base | default "http://localhost" }}
     NEXT_IMAGE_DOMAIN: {{ .Values.images.nextjs.config.image_domain | default "localhost" }}
