update ingress selector.

--- a/charts/drupal-nextjs/templates/service-ingress.yaml
+++ b/charts/drupal-nextjs/templates/service-ingress.yaml
@@ -13,7 +13,7 @@ spec:
       protocol: TCP
       targetPort: 80
     selector:
-        app: drupal
+        app: "{{ .Values.images.drupal.name }}-{{ .Values.appEnvironment }}"
     sessionAffinity: None
     type: ClusterIP
 status:
