Update service selector.

--- a/charts/drupal-nextjs/templates/service-app-default.yaml
+++ b/charts/drupal-nextjs/templates/service-app-default.yaml
@@ -15,7 +15,7 @@ spec:
       protocol: TCP
       targetPort: {{ .Values.images.nextjs.port }}
     selector:
-        app: "{{ .Values.images.nextjs.name }}-{{ .Values.appEnvironment }}"
+        app: "{{ include "quant.name" . }}-{{ .Values.appEnvironment }}"
     sessionAffinity: None
     type: ClusterIP
 status:
