Reinstate PV and probes.

--- a/charts/drupal-nextjs/templates/deployment.yaml
+++ b/charts/drupal-nextjs/templates/deployment.yaml
@@ -102,29 +102,29 @@ spec:
             - name: {{ .Values.images.nextjs.name }}-{{ .Values.appEnvironment }}
               containerPort: {{ .Values.images.nextjs.port }}
               protocol: TCP
-          # readinessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 300
-          #   periodSeconds: 10
-          #   successThreshold: 1
-          #   tcpSocket:
-          #     port: {{ .Values.images.nextjs.port }}
-          #   timeoutSeconds: 1
-          # livenessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 300
-          #   periodSeconds: 10
-          #   successThreshold: 1
-          #   tcpSocket:
-          #     port: {{ .Values.images.nextjs.port }}
+          readinessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 300
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
+              port: {{ .Values.images.nextjs.port }}
+            timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 300
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
+              port: {{ .Values.images.nextjs.port }}
           envFrom:
             - configMapRef:
                 name: "{{ .Values.images.drupal.name }}-config-{{ .Values.appEnvironment }}"
             - configMapRef:
                 name: "{{ .Values.images.nextjs.name }}-config-{{ .Values.appEnvironment }}"
-          # volumeMounts:
-          #   - name: {{ .Values.images.nextjs.name }}-data
-          #     mountPath: /app/.next
+          volumeMounts:
+            - name: {{ .Values.images.nextjs.name }}-data
+              mountPath: /app/.next
           resources:
             {{- if eq .Values.productionBranch .Values.appEnvironment }}
             {{- toYaml .Values.images.nextjs.resources | nindent 12 }}
